--- a/pom.xml
+++ b/pom.xml
@@ -406,6 +406,12 @@
                 <artifactId>freemarker</artifactId>
                 <version>2.3.28</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.23.1-GA</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
