--- a/pure-common/pom.xml
+++ b/pure-common/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>jackson-datatype-guava</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
