--- a/pom.xml
+++ b/pom.xml
@@ -327,6 +327,11 @@
                 <!-- jedis 2.9.0，这里的版本最高只能是 1.x -->
                 <version>1.8.11.RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>1.9.1</version>
+            </dependency>
 
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -400,6 +405,11 @@
                 <artifactId>commons-fileupload</artifactId>
                 <version>1.3.3</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>2.6.0</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.freemarker</groupId>
@@ -407,10 +417,29 @@
                 <version>2.3.28</version>
             </dependency>
 
+            <!--slf4j-->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.6.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>1.6.1</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
                 <version>3.23.1-GA</version>
+            </dependency>
+
+            <!--redis-->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>2.9.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
