--- a/pure-api/pom.xml
+++ b/pure-api/pom.xml
@@ -25,13 +25,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.kute</groupId>
-            <artifactId>pure-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
         </dependency>
     </dependencies>
 
