--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -117,6 +117,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
