--- a/provider/src/main/resources/dubbo.properties
+++ b/provider/src/main/resources/dubbo.properties
@@ -1,2 +1,6 @@
 dubbo.registry.protocol=zookeeper
 dubbo.registry.address=127.0.0.1:2181,127.0.0.1:2182,127.0.0.1:2183
+
+dubbo.application.name=pure-provider
+
+dubbo.module=provider
