--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>provider</module>
         <module>consumer</module>
         <module>pure-admin</module>
+        <module>registry-middleware</module>
+        <module>gateway-consumer</module>
     </modules>
     <packaging>pom</packaging>
 
