--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -24,6 +24,11 @@
     <dependencies>
         <dependency>
             <groupId>com.kute</groupId>
+            <artifactId>registry-middleware-server</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kute</groupId>
             <artifactId>pure-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
