--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -26,6 +26,12 @@
 
         <dependency>
             <groupId>com.kute</groupId>
+            <artifactId>registry-middleware-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kute</groupId>
             <artifactId>pure-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
